[gd_scene load_steps=2 format=3 uid="uid://c3isv60nxa80p"]

[ext_resource type="Script" path="res://Scripts/NewClan/RacePresentation.gd" id="1_5nlg0"]

[node name="RacePresentation" type="Popup"]
size = Vector2i(450, 450)
visible = true
script = ExtResource("1_5nlg0")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 375.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="RaceNameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="RaceIcon" type="TextureRect" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 1

[node name="RaceDescription" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Texte"
fit_content = true

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Fermer"
